src/css/style-big.css
html {
  height: 100%;
}

body {
  font-family: Arial, sans-serif;
  height: 100%;
  margin: 0;
  padding: 0;
}

blockquote {
  margin: 0;
  padding: 10px 0;
}

.info-window-content {
  width: 300px;
}

.info-window-heading {
  font-weight: bold;
}

.info-status {
  color: #ccc;
  margin: 0;
  padding: 10px 0;
}

.filter-menu {
  -webkit-align-content: flex-start;
  align-content: flex-start; /* Safari 8 */
  box-sizing: border-box;
  display: -webkit-flex; /* Safari 8 */
  display: flex;
  overflow-x: hidden;
  overflow-y: auto;
  padding: 10px 20px 20px 10px; /* Right and bottom account for drop-shadow on child */
  position: absolute;
  transition: transform 0.5s cubic-bezier(0.5, 0, 0.3, 1); /* transition when coming out of small screen CSS */
}

.filter-menu-list-wrapper {
  background-color: #f1eddb;
  border-radius: 10px;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.35);
  box-sizing: border-box;
  padding: 10px 10px 0;
  width: 215px;
}

.filter-menu-list {
  border-top: 3px groove #d4d0be;
  box-sizing: border-box;
  margin: 0 -10px; /* Left/right margin should be negative of padding in parent */
  padding: 0;
}

.filter-menu-list-item {
  border-top: 1px solid #d4d0be;
  cursor: pointer;
  list-style-type: none;
  margin: 0;
  padding: 10px;
}

.selected {
  background-color: #fff;
}

.filter-menu-list-item:first-child {
  border-top: none;
}

.filter-menu-input {
  box-sizing: border-box;
  margin: 0 0 10px;
  width: 100%;
}

.burger-button {
  display: none;
}

#map {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

